<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/qb_px_537"
    android:layout_height="@dimen/qb_px_300"
    android:background="@mipmap/icon_pop_bg">

    <TextView
        android:id="@+id/dialogTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_12"
        android:textColor="@color/menu_text_color"
        android:textSize="@dimen/text_size_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="高级设置" />

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_60"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTv">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_message"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/text_size_larger" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/qb_px_50"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btConfirm"
            android:layout_width="@dimen/qb_px_120"
            android:layout_height="@dimen/qb_px_48"
            android:background="@drawable/select_dialog_confirm"
            android:text="@string/dialog_button_confirm"
            android:textAllCaps="false"
            android:textColor="@color/menu_text_select_color" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="@dimen/qb_px_120"
            android:layout_height="@dimen/qb_px_48"
            android:layout_marginLeft="@dimen/qb_px_24"
            android:background="@drawable/select_dialog_cancel"
            android:text="@string/dialog_button_cancel"
            android:textAllCaps="false"
            android:textColor="@color/menu_text_color" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>