<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/qb_px_537"
    android:layout_height="@dimen/qb_px_300"
    android:background="@mipmap/icon_pop_bg">

    <TextView
        android:id="@+id/dialogTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_12"
        android:textColor="@color/menu_text_color"
        android:textSize="@dimen/text_size_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dialog_high_setting_title" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_60"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogTv">

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_password_desc"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/text_size_larger"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/etPassword"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="@dimen/qb_px_240"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:inputType="number|numberPassword"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/text_size_larger"
            app:layout_constraintBottom_toBottomOf="@+id/tvPassword"
            app:layout_constraintLeft_toRightOf="@+id/tvPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvPassword" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_pop_line"
            app:layout_constraintLeft_toLeftOf="@+id/etPassword"
            app:layout_constraintRight_toRightOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/btLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/qb_px_50"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btConfirm"
            android:layout_width="@dimen/qb_px_120"
            android:layout_height="@dimen/qb_px_48"
            android:background="@drawable/select_dialog_confirm"
            android:text="@string/dialog_button_confirm"
            android:textAllCaps="false"
            android:textColor="@color/menu_text_select_color" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="@dimen/qb_px_120"
            android:layout_height="@dimen/qb_px_48"
            android:layout_marginLeft="@dimen/qb_px_24"
            android:background="@drawable/select_dialog_cancel"
            android:text="@string/dialog_button_cancel"
            android:textAllCaps="false"
            android:textColor="@color/menu_text_color" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>