<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/modify_ip_color_bg"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/sip_bg"
        android:paddingBottom="@dimen/qb_px_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_6"
            android:focusable="true"
            android:text="@string/sip_setting_title"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/qb_px_28"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvUserDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qb_px_96"
            android:layout_marginTop="@dimen/qb_px_100"
            android:text="@string/sip_username_desc"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/qb_px_27"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_50"
            android:layout_marginLeft="@dimen/qb_px_32"
            android:layout_marginRight="@dimen/qb_px_77"
            android:background="@mipmap/sip_input"
            android:paddingLeft="@dimen/qb_px_10"
            android:textColor="@color/menu_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/tvUserDesc"
            app:layout_constraintLeft_toRightOf="@+id/tvUserDesc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvUserDesc"
            tools:text="156354" />

        <TextView
            android:id="@+id/tvPsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qb_px_96"
            android:layout_marginTop="@dimen/qb_px_50"
            android:text="@string/sip_password_desc"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/qb_px_27"
            app:layout_constraintRight_toRightOf="@+id/tvUserDesc"
            app:layout_constraintTop_toBottomOf="@+id/tvUserDesc" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_50"
            android:layout_marginLeft="@dimen/qb_px_32"
            android:layout_marginRight="@dimen/qb_px_77"
            android:background="@mipmap/sip_input"
            android:paddingLeft="@dimen/qb_px_10"
            android:textColor="@color/menu_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/tvPsw"
            app:layout_constraintLeft_toRightOf="@+id/tvPsw"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvPsw" />

        <TextView
            android:id="@+id/tvDomain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qb_px_96"
            android:layout_marginTop="@dimen/qb_px_50"
            android:text="@string/sip_domain_desc"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/qb_px_27"
            app:layout_constraintRight_toRightOf="@+id/tvPsw"
            app:layout_constraintTop_toBottomOf="@+id/tvPsw" />

        <EditText
            android:id="@+id/domain"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_50"
            android:layout_marginLeft="@dimen/qb_px_32"
            android:layout_marginRight="@dimen/qb_px_77"
            android:background="@mipmap/sip_input"
            android:inputType="number|text"
            android:paddingLeft="@dimen/qb_px_10"
            android:textColor="@color/menu_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/tvDomain"
            app:layout_constraintLeft_toRightOf="@+id/tvDomain"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvDomain" />

        <Button
            android:id="@+id/configure"
            android:layout_width="@dimen/qb_px_120"
            android:layout_height="@dimen/qb_px_48"
            android:layout_marginLeft="@dimen/qb_px_217"
            android:layout_marginTop="@dimen/qb_px_49"
            android:background="@drawable/select_dialog_confirm"
            android:text="@string/sip_connect_bt"
            android:textAllCaps="false"
            android:textColor="@color/menu_text_select_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDomain" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="@dimen/qb_px_120"
            android:layout_height="@dimen/qb_px_48"
            android:layout_marginLeft="@dimen/qb_px_64"
            android:background="@drawable/select_dialog_cancel"
            android:text="@string/sip_cancel_bt"
            android:textAllCaps="false"
            android:textColor="@color/menu_text_color"
            app:layout_constraintLeft_toRightOf="@+id/configure"
            app:layout_constraintTop_toTopOf="@+id/configure" />

    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/assistant_transports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/transport_udp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:checked="true"
                android:text="UDP" />

            <RadioButton
                android:id="@+id/transport_tcp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="TCP" />

            <RadioButton
                android:id="@+id/transport_tls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="TLS" />

        </RadioGroup>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>