<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/qb_px_25"
    android:paddingRight="@dimen/qb_px_25">

    <TextView
        android:id="@+id/tvPlanCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="10"
        android:textColor="@color/menu_text_color"
        android:textSize="@dimen/qb_px_16"
        app:layout_constraintBottom_toTopOf="@+id/ivPillarPlan"
        app:layout_constraintLeft_toLeftOf="@+id/ivPillarPlan"
        app:layout_constraintRight_toRightOf="@+id/ivPillarPlan" />

    <ImageView
        android:id="@+id/ivPillarPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_10"
        android:layout_marginBottom="@dimen/qb_px_10"
        android:background="@mipmap/icon_ka_two"
        app:layout_constraintBottom_toTopOf="@+id/planDesc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ivPillarComplete" />

    <TextView
        android:id="@+id/planDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_15"
        android:text="@string/statistical_chan_plan"
        android:textColor="@color/medium_text_color"
        android:textSize="@dimen/qb_px_14"
        app:layout_constraintBottom_toTopOf="@+id/tvPlace"
        app:layout_constraintLeft_toLeftOf="@+id/ivPillarPlan"
        app:layout_constraintRight_toRightOf="@+id/ivPillarPlan" />

    <TextView
        android:id="@+id/tvCompleteCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="10"
        android:textColor="@color/menu_text_color"
        android:textSize="@dimen/qb_px_16"
        app:layout_constraintBottom_toTopOf="@+id/ivPillarComplete"
        app:layout_constraintLeft_toLeftOf="@+id/ivPillarComplete"
        app:layout_constraintRight_toRightOf="@+id/ivPillarComplete" />

    <ImageView
        android:id="@+id/ivPillarComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/qb_px_10"
        android:layout_marginTop="@dimen/qb_px_10"
        android:layout_marginBottom="@dimen/qb_px_10"
        android:background="@mipmap/icon_ka_two"
        app:layout_constraintBottom_toTopOf="@+id/completeDesc"
        app:layout_constraintLeft_toRightOf="@+id/ivPillarPlan"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/completeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_10"
        android:text="@string/statistical_chan_complete"
        android:textColor="@color/medium_text_color"
        android:textSize="@dimen/qb_px_14"
        app:layout_constraintBottom_toTopOf="@+id/tvPlace"
        app:layout_constraintLeft_toLeftOf="@+id/ivPillarComplete"
        app:layout_constraintRight_toRightOf="@+id/ivPillarComplete" />

    <TextView
        android:id="@+id/tvPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_10"
        android:gravity="center"
        android:lines="2"
        android:maxEms="5"
        android:text="@string/statistics_chan_zhuang_point"
        android:textColor="@color/menu_text_color"
        android:textSize="@dimen/qb_px_19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>